assets/styles.css
body {
  font-family: 'Roboto', sans-serif;
  overflow-x: hidden;
}

.link {
  color: inherit;
  text-decoration: none;
}

.link:hover {
  color: inherit;
}

footer {
  height: 150%;
}


.welcome-avatar{
  margin-top: 10%;
  padding-left: 20%;
}

.avatar {
  width: 75%;
}

.internal-btn {
  width: 100%;
  margin-bottom: 1rem;
}

/* .contact-btn {
  width:100%;
} */

.welcome-content {
  margin-top: 10%;
  padding: 20% 25% 0 0;
}

.contact-icon-bar {
  text-align: right;
}

.contact-icon {
  margin-right: 2rem;
  font-size: 1.25rem;
}

.contact-text {
  font-size: 1.25rem;
}


@media (max-width: 768px) {
  body {
    overflow-x: hidden;
  }

  h1 {
    text-align: center;
    padding-bottom: 1.5rem;
  }

  footer {
    position: static;
    text-align: center;
  }

  .welcome-content {
    margin-bottom: 5%;
    padding: 0 1rem 0 1rem;
  }

  .contact-text {
    padding-bottom: 1.5rem;
  }

  .contact-icon-bar {
    text-align: center;
  }

  .contact-icon {
    font-size: 1.5rem;
    margin:1.5rem;
  }

  .welcome-avatar {
    padding: 0;
  }
}

